--- a/templates/new.html.twig
+++ b/templates/new.html.twig
@@ -4,10 +4,12 @@
 {% block title %}My CURD Application{% endblock %}
 {% block body %}
     <div class="container">
-        <div class="row">
-            {{ form_start(form) }}
-            {{ form_widget(form) }}
-            {{ form_end(form) }}
-        </div>
+            <div class="row">
+                <div class="col-md-11"></div>
+                <div class="col-md-push-1">
+                    <a class="btn btn-default" href="{{path('home_url')}}">Cancel</a>
+                </div>
+            </div>            
+            {{ form(form, {'attr': {'novalidate': 'novalidate'}}) }}            
     </div>
 {% endblock %}
