--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,8 +4,18 @@
 {% block title %}My CURD Application{% endblock %}
 {% block body %}
     <div class="container">
+        {% for message in app.flashes('notice') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
         <h2>My Tasks</h2>
-        <a class="btn btn-primary" href="{{path('add_new_task')}}">Add New Task</a>
+        <a class="btn btn-primary" href="{{path('add_new_task')}}">Add New Task</a>        
         <table class="table table-bordered">
             <thead>
               <tr>
