--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -9,6 +9,11 @@
                 {{ message }}
             </div>
         {% endfor %}
+        {% for message in app.flashes('message') %}
+            <div class="alert alert-warning">
+                {{ message }}
+            </div>
+        {% endfor %}
         {% for message in app.flashes('error') %}
             <div class="alert alert-danger">
                 {{ message }}
