symfony-custom-bundle-email-subscriber-system

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -21,6 +21,7 @@
         {% endfor %}
         <h2>My Tasks</h2>
         <a class="btn btn-primary" href="{{path('add_new_task')}}">Add New Task</a>        
+        <a class="btn btn-primary" href="{{path('ib_emailsubscribe_add_new')}}">Subscribe</a>
         <table class="table table-bordered">
             <thead>
               <tr>
